# montycat_serialization_derive

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: push_to_crates.yml
src/: lib.rs
tests/: derive_tests.rs
