[package]
name = "montycat_serialization_derive"
version = "0.1.5"
edition = "2021"
authors = ["MontyGovernance"]
description = "A derive trait for custom compact serialization/deserialization."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
rmp-serde = "1.3.0"
proc-macro2 = "1.0.93"
syn = "2.0.96"
quote = "1.0.38"

[lib]
proc-macro = true