[package]
name = "montycat_serialization_derive"
version = "0.1.6"
edition = "2021"
authors = ["MontyGovernance"]
description = "A derive trait for custom compact serialization/deserialization. Provides Runtime schema methods. Derives and identifies struct's fields and their types."
license = "MIT OR Apache-2.0"
readme = "README.md"

documentation = "https://docs.rs/montycat_serialization_derive"
homepage = "https://montygovernance.com"
keywords = ["serialization", "derive", "rust", "schema", "database"]
categories = ["development-tools", "encoding", "database"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = "1.3.0"
proc-macro2 = "1.0.103"
syn = "2.0.108"
quote = "1.0.41"
hashbrown = { version = "0.16.0", features = ["serde"] }

[lib]
proc-macro = true
doctest = false